支持了平滑滚动

--- a/ArchiveMaster.Core/Views/TwoStepPanelBase.axaml
+++ b/ArchiveMaster.Core/Views/TwoStepPanelBase.axaml
@@ -23,6 +23,7 @@
 
             <ScrollViewer
                 MaxHeight="{DynamicResource ConfigMaxHeight}"
+                local:SmoothScrollBehavior.IsEnabled="True"
                 HorizontalScrollBarVisibility="Disabled"
                 IsEnabled="{Binding CanInitialize}"
                 VerticalScrollBarVisibility="Auto">
