--- a/ArchiveMaster.Module.PhotoTools/Views/RepairModifiedTimePanel.axaml
+++ b/ArchiveMaster.Module.PhotoTools/Views/RepairModifiedTimePanel.axaml
@@ -29,7 +29,9 @@
                             Minimum="1"
                             Value="{Binding Config.ThreadCount}" />
                     </ct:FormItem>
-
+                    <ct:FormItem Label="需处理文件后缀名：">
+                        <TextBox Text="{Binding Config.PhotoExtensions, Converter={StaticResource StringListConverter}}" />
+                    </ct:FormItem>
                     <ct:FormItem Label="最长容忍差异时间（秒）：">
                         <NumericUpDown
                             Width="120"
