优化了FilePicker的多文件表现

--- a/ArchiveMaster.Core/GlobalResources.axaml
+++ b/ArchiveMaster.Core/GlobalResources.axaml
@@ -9,4 +9,5 @@
     </ResourceDictionary.MergedDictionaries>
     <c:BitmapAssetValueConverter x:Key="BitmapAssetValueConverter" />
     <c:DateTimeConverter x:Key="DateTimeConverter" />
+    <c:BoolTextWrapConverter x:Key="BoolTextWrapConverter" />
 </ResourceDictionary>
