--- a/ArchiveMaster.Core/Views/FilePickerTextBox.axaml
+++ b/ArchiveMaster.Core/Views/FilePickerTextBox.axaml
@@ -19,7 +19,10 @@
         <TextBox
             Grid.Column="2"
             VerticalAlignment="Center"
-            Text="{Binding ElementName=root, Path=FileNames}" />
+            AcceptsReturn="{Binding ElementName=root, Path=AllowMultiple}"
+            MaxLines="3"
+            Text="{Binding ElementName=root, Path=FileNames}"
+            TextWrapping="{Binding ElementName=root, Path=AllowMultiple, Converter={StaticResource BoolTextWrapConverter}}" />
         <Button
             Grid.Column="4"
             Margin="8,0,0,0"
