修复了批量重命名的一些问题，并增加了文档

--- a/ArchiveMaster.Module.FileTools/Views/RenamePanel.axaml
+++ b/ArchiveMaster.Module.FileTools/Views/RenamePanel.axaml
@@ -30,7 +30,11 @@
             </ct:FormItem>
 
             <ct:FormItem Label="替换关键词：">
-                <TextBox Text="{Binding Config.ReplacePattern}" />
+                <TextBox
+                    AcceptsReturn="True"
+                    MaxLines="5"
+                    Text="{Binding Config.ReplacePattern}"
+                    TextWrapping="Wrap" />
             </ct:FormItem>
 
             <ct:FormItem Label="搜索选项：">
