--- a/ArchiveMaster.Module.OfflineSync/Views/Step2Panel.axaml
+++ b/ArchiveMaster.Module.OfflineSync/Views/Step2Panel.axaml
@@ -70,6 +70,7 @@
                             Text="密码：" />
                         <TextBox
                             Grid.Column="4"
+                            Classes="revealPasswordButton"
                             IsVisible="{Binding Config.EnableEncryption}"
                             PasswordChar="*"
                             Text="{Binding Config.EncryptionPassword}" />
