--- a/ArchiveMaster.Module.OfflineSync/Views/Step3Panel.axaml
+++ b/ArchiveMaster.Module.OfflineSync/Views/Step3Panel.axaml
@@ -16,6 +16,7 @@
     ExecuteButtonContent="2.更新"
     InitializeButtonContent="1.分析"
     mc:Ignorable="d">
+    <UserControl.Resources />
     <v:TwoStepPanelBase.Styles>
         <StyleInclude Source="Styles.axaml" />
     </v:TwoStepPanelBase.Styles>
@@ -30,6 +31,7 @@
 
             <ctrl:FormItem Label="密码（若备份文件被加密）：">
                 <TextBox
+                    Classes="revealPasswordButton"
                     PasswordChar="*"
                     Text="{Binding Config.Password}" />
             </ctrl:FormItem>
