--- a/ArchiveMaster.UI/Views/SplashWindow.axaml
+++ b/ArchiveMaster.UI/Views/SplashWindow.axaml
@@ -12,6 +12,7 @@
     Width="256"
     Height="256"
     Background="{x:Null}"
+    CanResize="False"
     ShowInTaskbar="False"
     SystemDecorations="None"
     Topmost="True"
