--- a/ArchiveMaster.Module.FileBackupper/Views/BackupManageCenterPanel.axaml
+++ b/ArchiveMaster.Module.FileBackupper/Views/BackupManageCenterPanel.axaml
@@ -63,7 +63,11 @@
                     Classes="Icon"
                     Command="{Binding LoadTasksCommand}"
                     Content="{StaticResource ReturnToCall}"
-                    ToolTip.Tip="返回" />
+                    ToolTip.Tip="返回">
+                    <Button.RenderTransform>
+                        <ScaleTransform ScaleX="-1" />
+                    </Button.RenderTransform>
+                </Button>
             </StackPanel>
 
             <TabControl IsVisible="{Binding !!SelectedTask}">
@@ -84,21 +88,21 @@
                         <Setter Property="HorizontalAlignment" Value="Center" />
                     </Style>
                 </TabControl.Styles>
-              <TabItem
-                  Header="变更内容"
-                  IsVisible="{Binding !!SelectedSnapshot}">
-                <v:SnapshotChangesPanel />
-              </TabItem>
-              <TabItem
-                  Header="快照文件"
-                  IsVisible="{Binding !!SelectedSnapshot}">
-                <v:SnapshotFilesPanel />
-              </TabItem>
-              <TabItem
-                  Header="文件历史记录"
-                  IsVisible="{Binding !!SelectedFile}">
-                <v:SnapshotFileHistoryPanel />
-              </TabItem>
+                <TabItem
+                    Header="变更内容"
+                    IsVisible="{Binding !!SelectedSnapshot}">
+                    <v:SnapshotChangesPanel />
+                </TabItem>
+                <TabItem
+                    Header="快照文件"
+                    IsVisible="{Binding !!SelectedSnapshot}">
+                    <v:SnapshotFilesPanel />
+                </TabItem>
+                <TabItem
+                    Header="文件历史记录"
+                    IsVisible="{Binding !!SelectedFile}">
+                    <v:SnapshotFileHistoryPanel />
+                </TabItem>
                 <TabItem
                     Header="日志"
                     IsVisible="{Binding SelectedSnapshot}">
