备份界面使用全量备份-全量备份下属备份的形式来展示

--- a/ArchiveMaster.Module.FileBackupper/Views/SnapshotPanel.axaml
+++ b/ArchiveMaster.Module.FileBackupper/Views/SnapshotPanel.axaml
@@ -7,10 +7,21 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid RowDefinitions="*,8,Auto">
+    <Grid RowDefinitions="Auto,4,Auto,8,Auto,4,*,8,Auto">
+        <TextBlock Text="全量快照" />
+        <ComboBox
+            Grid.Row="2"
+            HorizontalAlignment="Stretch"
+            DisplayMemberBinding="{Binding FullSnapshot.BeginTime}"
+            ItemsSource="{Binding FullSnapshots}"
+            SelectedItem="{Binding SelectedFullSnapshot}" />
+        <TextBlock
+            Grid.Row="4"
+            Text="全量快照下的所有快照" />
         <DataGrid
+            Grid.Row="6"
             IsReadOnly="True"
-            ItemsSource="{Binding Snapshots}"
+            ItemsSource="{Binding SelectedFullSnapshot.Snapshots}"
             SelectedItem="{Binding SelectedSnapshot}">
             <DataGrid.Columns>
                 <DataGridTextColumn
@@ -48,7 +59,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel
-            Grid.Row="2"
+            Grid.Row="8"
             Orientation="Horizontal">
             <Button
                 Classes="Icon"
