--- a/ArchiveMaster.Module.PhotoTools/Views/PhotoGeoSorterPanel.axaml
+++ b/ArchiveMaster.Module.PhotoTools/Views/PhotoGeoSorterPanel.axaml
@@ -1,5 +1,5 @@
 <v:TwoStepPanelBase
-    x:Class="ArchiveMaster.Views.PhotoGeoTaggingPanel"
+    x:Class="ArchiveMaster.Views.PhotoGeoSorterPanel"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ct="using:FzLib.Avalonia.Controls"
@@ -20,37 +20,20 @@
                     IsFilterButtonVisible="True"
                     Type="OpenFolder" />
             </ct:FormItem>
-            <ct:FormItem Label="GPX文件：">
+            <ct:FormItem Label="矢量地理文件：">
                 <v:FilePickerTextBox
                     AllowMultiple="True"
-                    FileNames="{Binding Config.GpxFile}"
-                    StringFileTypeFilter="GPS轨迹文件;*.gpx;;"
+                    FileNames="{Binding Config.VectorFile}"
+                    StringFileTypeFilter="Shapefile文件;*.shp;;|GeoJSON文件;*.geojson;;"
                     Type="OpenFile" />
             </ct:FormItem>
-            <ct:FormItem Label="需处理文件后缀名：">
-                <TextBox Text="{Binding Config.PhotoExtensions, Converter={StaticResource StringListConverter}}" />
+            <ct:FormItem Label="目录字段名：">
+                <TextBox Text="{Binding Config.FieldName}" />
             </ct:FormItem>
-            <ct:FormItem
-                Description="允许匹配的最大时间差。若照片时间与所有GPX点的时间差均超过此值，则跳过该照片"
-                Label="最长时间差异：">
-                <TimePicker
-                    SelectedTime="{Binding Config.MaxTolerance}"
-                    UseSeconds="True" />
+            <ct:FormItem Label="范围外目录名：">
+                <TextBox Text="{Binding Config.NameOutOfRegion}" />
             </ct:FormItem>
-            <ct:FormItem
-                Description="相机时间与GPX时间的差值"
-                Label="相机时间偏移：">
-                <StackPanel Orientation="Horizontal">
-                    <TimePicker
-                        SelectedTime="{Binding Config.TimeOffset}"
-                        UseSeconds="True" />
-                    <ToggleSwitch
-                        IsChecked="{Binding Config.InverseTimeOffset}"
-                        OffContent="相机时间更快"
-                        OnContent="GPX时间更快" />
-                </StackPanel>
 
-            </ct:FormItem>
 
         </ct:StackFormItemGroup>
     </v:TwoStepPanelBase.ConfigsContent>
@@ -76,34 +59,15 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn
-                    CanUserResize="False"
-                    Header="已有坐标"
-                    SortMemberPath="AlreadyHasGps">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Ellipse
-                                Width="8"
-                                Height="8"
-                                Fill="{DynamicResource Foreground0}"
-                                IsVisible="{Binding AlreadyHasGps}" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTextColumn
-                    Binding="{Binding ExifTime}"
-                    Header="Exif时间"
-                    IsReadOnly="True" />
-                <DataGridTextColumn
-                    Binding="{Binding GpsTime}"
-                    Header="GPS时间"
-                    IsReadOnly="True" />
                 <DataGridTextColumn
                     Binding="{Binding Longitude}"
                     Header="经度" />
                 <DataGridTextColumn
                     Binding="{Binding Latitude}"
                     Header="纬度" />
+                <DataGridTextColumn
+                    Binding="{Binding Region}"
+                    Header="目标目录名" />
             </DataGrid.Columns>
         </v:SimpleFileDataGrid>
     </v:TwoStepPanelBase.ResultsContent>
