基本完成照片地理分类模块

--- a/ArchiveMaster.Module.FileTools/Views/LinkDeduplicationPanel.axaml
+++ b/ArchiveMaster.Module.FileTools/Views/LinkDeduplicationPanel.axaml
@@ -51,7 +51,7 @@
                 <v:TreeFileDataGrid.Columns>
                     <DataGridTextColumn
                         Binding="{Binding RelativePath}"
-                        Header="Hash" />
+                        Header="Hash/相对路径" />
                 </v:TreeFileDataGrid.Columns>
             </v:TreeFileDataGrid>
         </Grid>
