--- a/ArchiveMaster.Module.DiscArchive/Views/RebuildPanel.axaml
+++ b/ArchiveMaster.Module.DiscArchive/Views/RebuildPanel.axaml
@@ -84,7 +84,7 @@
                                                 <InlineCollection>
                                                     <Run Text="{Binding Name, Mode=OneWay}" />
                                                     <Run Text="（" />
-                                                    <Run Text="{Binding File.Length, Mode=OneWay, Converter={StaticResource FileLength2StringConverter}}" />
+                                                    <Run Text="{Binding File.Length, Mode=OneWay, Converter={StaticResource FileLengthConverter}}" />
                                                     <Run Text="，" />
                                                     <Run Text="{Binding File.Time, Mode=OneWay, StringFormat='{}{0:yyyy-MM-dd HH:mm:ss}'}" />
                                                     <Run Text="）" />
