--- a/ArchiveMaster.Core/Views/FileDataGridStyle.axaml
+++ b/ArchiveMaster.Core/Views/FileDataGridStyle.axaml
@@ -4,7 +4,9 @@
     xmlns:c="using:FzLib.Avalonia.Converters"
     xmlns:c2="using:ArchiveMaster.Converters"
     xmlns:ctrl="using:FzLib.Avalonia.Controls"
-    xmlns:v="using:ArchiveMaster.Views">
+    xmlns:fs="clr-namespace:ArchiveMaster.ViewModels.FileSystem"
+    xmlns:v="using:ArchiveMaster.Views"
+    x:CompileBindings="False">
     <SolidColorBrush
         x:Key="DataGridCellFocusVisualPrimaryBrush"
         Color="Transparent" />
@@ -17,7 +19,7 @@
         BasedOn="{StaticResource {x:Type DataGrid}}"
         TargetType="v:SimpleFileDataGrid">
         <Setter Property="RowDetailsTemplate">
-            <DataTemplate>
+            <DataTemplate x:DataType="fs:SimpleFileInfo">
                 <Border Padding="8">
                     <Border.Styles>
                         <Style Selector="TextBox">
