--- a/ArchiveMaster.Core/Views/PanelBase.axaml
+++ b/ArchiveMaster.Core/Views/PanelBase.axaml
@@ -4,9 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:ArchiveMaster.ViewModels"
     x:Name="root"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    x:DataType="vm:ViewModelBase"
     Background="{DynamicResource Background1}"
     mc:Ignorable="d">
 
