--- a/ArchiveMaster.Core/Views/TwoStepPanelBase.axaml
+++ b/ArchiveMaster.Core/Views/TwoStepPanelBase.axaml
@@ -6,9 +6,11 @@
     xmlns:local="using:ArchiveMaster.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sys="using:System"
+    xmlns:vm="using:ArchiveMaster.ViewModels"
     x:Name="Root"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    x:CompileBindings="False"
     mc:Ignorable="d">
 
     <local:MultiPresetPanelBase.Resources>
